Fixed the sticking out issue hopefully

--- a/style.scss
+++ b/style.scss
@@ -21,9 +21,6 @@ $medium:800px;
     border: 0;
 }
 
-header{
-    overflow: hidden;
-}
 
 .navbar{
     
@@ -60,15 +57,16 @@ header{
             right: 0;
 
             font-size: 25px;
-            transform: translateX(50vw);
+            transform: translateX(50vw) scaleX(0);
+            transform-origin: right;
             
             
 
         }
 
         &.active{
-            transition: transform 0.5s ease-in-out;
-            transform: translateX(0);
+            transition: 0.5s ease-in-out;
+            transform: translateX(0) scaleX(1);
         }
 
     }
